--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <form action="/submit" method="post">
               <input
                 type="email"
-                name="email"
+                name="email2"
                 id="email"
                 placeholder="Enter your email..."
                 required />
@@ -67,7 +67,7 @@
           <img class="curvy-top" src="./images/bg-curve-desktop.svg" alt="bg-curve-desktop" />
         </div>
 
-        <article class="productive">
+        <div class="productive">
           <aside>
             <div class="stay-productive">
               <h2>Stay productive, wherever you are</h2>
@@ -112,7 +112,7 @@
               src="./images/illustration-2.svg"
               alt="illustration-2" />
           </div>
-        </article>
+        </div>
 
         <section>
           <div>
@@ -131,7 +131,7 @@
       </main>
 
       <footer>
-        <img src="./images/logo.svg" alt="logo" fill="#ffffff" />
+        <img src="./images/logo.svg" alt="logo" />
         <div class="links-2">
           <div class="contacts">
             <a href="#"
