--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <form action="/submit" method="post">
               <input
                 type="email"
-                name="email2"
-                id="email"
+                name="email"
+                id="email2"
                 placeholder="Enter your email..."
                 required />
               <button type="submit">Get Started</button>
