--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="productive">
-          <aside>
+          <div>
             <div class="stay-productive">
               <h2>Stay productive, wherever you are</h2>
               <p>
@@ -97,14 +97,14 @@
 
                 <div class="avatar">
                   <img src="./images/avatar-testimonial.jpg" alt="avatar-testimonial" />
-                  <aside>
-                    <h4>Kyle Burton</h4>
+                  <div>
+                    <h3>Kyle Burton</h3>
                     <p>Founder & CEO, Huddle</p>
-                  </aside>
+                  </div>
                 </div>
               </div>
             </div>
-          </aside>
+          </div>
           <div class="illustration-2">
             <img
               class="w-96 md:w-3/4 lg:w-max"
@@ -116,7 +116,7 @@
 
         <section>
           <div>
-            <h3>Get early access today</h3>
+            <h4>Get early access today</h4>
             <p>
               It only takes a minute to sign up and our free starter tier is extremely generous. If
               you have any questions, our support team would be happy to help you.
