--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <a href="#">Privacy</a>
           </div>
           <div class="icons">
-            <a href="#"><i class="fa-brands fa-facebook fa-l"></i></a>
+            <a href="#" aria-label="facebook.com"><i class="fa-brands fa-facebook fa-l"></i></a>
             <a href="#"><i class="fa-brands fa-twitter fa-l"></i></a>
             <a href="#"><i class="fa-brands fa-instagram fa-l"></i></a>
           </div>
