--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
           </div>
           <div class="icons">
             <a href="#" aria-label="facebook.com"><i class="fa-brands fa-facebook fa-l"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter fa-l"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram fa-l"></i></a>
+            <a href="#" aria-label="twitter.com"><i class="fa-brands fa-twitter fa-l"></i></a>
+            <a href="#" aria-label="instagram.com"><i class="fa-brands fa-instagram fa-l"></i></a>
           </div>
         </div>
       </footer>
