--- a/index.html
+++ b/index.html
@@ -123,14 +123,9 @@
             </p>
           </div>
 
-          <form
-            action="mailto:axelace928@gmail.com"
-            class="form-2"
-            action="/submit"
-            method="post"
-            enctype="text/plain">
+          <form class="form-2" action="/submit" method="post">
             <input type="email" name="email" id="email" placeholder="example@gmail.com" required />
-            <input type="submit" value="Get Started For Free" />
+            <button>Get Started For Free</button>
           </form>
         </section>
       </main>
@@ -163,17 +158,5 @@
         </div>
       </footer>
     </div>
-
-    <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script type="text/javascript">
-      (function () {
-        emailjs.init({
-          publicKey: 'pnSS8AsZkdATi__2I',
-        });
-      })();
-    </script>
-    <script src="script.js"></script>
   </body>
 </html>
